# cortex

./: .gitignore  CHANGELOG.md  CLAUDE-decisions.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  deny.toml  main.py
.claude/: CLAUDE-decisions.md  IMPL_PLAN.md
.claude/bench/insane/: prewarm-Cargo.toml  run.sh
.claude/bench/insane/projects/: actor_fw.md  bft_sim.md  cache_proxy.md  cron_scheduler.md  git_tiny.md  iso9660_reader.md  jq_clone.md  kv_http.md  markdown_ssg.md  proto_codec.md  rate_limiter.md  sql_parser.md  ws_echo.md
.claude/bench/insane/python-projects/: csv_aggregator.md  event_bus.md  json_schema_validator.md  lru_cache_py.md  rate_limiter_py.md  task_queue.md  url_router.md
.claude/bench/insane/results/: README.md  algo-smoke-1-claude.tsv  algo-smoke-2-cortex-deepseek.tsv
.claude/bench/insane/tasks/: bloom_filter.md  deflate_decoder.md  dpll_sat.md  hyperloglog.md  lisp_interp.md  lru_threadsafe.md  paxos_basic.md  persistent_btree.md  radix_sort_generic.md  regex_nfa.md  rope.md  skip_list_atomic.md  wal_log.md
.claude/scan-reports/: 2026-05-11-0522-DEEP.md
.github/workflows/: ci.yml  release.yml
crates/cortex-bench/: Cargo.toml
crates/cortex-bench/src/: main.rs  metrics.rs  report.rs  runner.rs  tasks.rs
crates/cortex-cli/: Cargo.toml
crates/cortex-cli/src/: main.rs  research.rs
crates/cortex-context/: Cargo.toml
crates/cortex-context/src/: indexer.rs  lib.rs  parser.rs  store.rs  symbol.rs
crates/cortex-core/: Cargo.toml
crates/cortex-core/src/: config.rs  gate.rs  git_context.rs  lib.rs  lock_ext.rs  main.rs  protocol.rs  router.rs  semaphore.rs  semaphore_test.rs  stale_branch.rs  workspace.rs  workspace_guard.rs
crates/cortex-core/tests/: kill_switch.rs
crates/cortex-daemon/: Cargo.toml
crates/cortex-daemon/src/: apply.rs  groq.rs  kairos.rs  lib.rs  main.rs  ollama.rs  server.rs
crates/cortex-daemon/src/server/: apply_handler.rs  ask.rs  debate.rs  implement.rs  research.rs
crates/cortex-daemon/tests/: apply_integration.rs
crates/cortex-mcp/: Cargo.toml
crates/cortex-mcp/src/: client.rs  lib.rs  verification.rs
crates/cortex-tools/: Cargo.toml
crates/cortex-tools/src/: executor.rs  lib.rs  plugin.rs  runtime.rs  session.rs  spec.rs
crates/cortex-tools/src/tools/: bash.rs  file_ops.rs  mod.rs  search.rs
docs/adr/: ADR-003-verification-first-pivot.md  ADR-004-writer-retry-loop.md  ADR-005-rust-only-verification-scope.md  ADR-006-federation-deferred-pending-escalation.md  ADR-007-multi-language-override-rejected-phase-0-prework.md
docs/bugs/: 2026-05-21-implement-integrity-failures.md
docs/superpowers/plans/: 2026-05-07-cortex-rag-autoindex.md  2026-05-08-apply-writer-retry-loop.md
packaging/aur/: PKGBUILD
packaging/systemd/: cortex-daemon.service
scheduler/: __init__.py  api.py  cli.py  config.py  models.py  queue.py  scheduler.py  storage.py  worker.py
