[workspace]
members = ["crates/cortex-core", "crates/cortex-cli", "crates/cortex-daemon", "crates/cortex-context", "crates/cortex-tools", "crates/cortex-mcp", "crates/cortex-bench"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
rust-version = "1.93"
repository = "https://github.com/supernavyl/cortex"
homepage = "https://github.com/supernavyl/cortex"
description = "CORTEX — Rust pre-apply verification gate for coding AI"
authors = ["supernovyl"]

[workspace.lints.clippy]
# Production unwraps were swept 2026-05-19 (Phase 5). Mutex locks now use
# `LockExt::lock_panic_on_poison()`; remaining sites carry SAFETY justifications.
# Keep this at warn so test code is unaffected; CI enforces -D warnings.
unwrap_used = "warn"
expect_used = "warn"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.33", features = ["bundled"] }
futures = "0.3"
