[package]
name = "cortex-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
cortex-core = { path = "../cortex-core" }
cortex-mcp = { path = "../cortex-mcp" }
cortex-tools = { path = "../cortex-tools" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true

[lints]
workspace = true
