[package]
name = "cortex-context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
rusqlite.workspace = true
serde.workspace = true

tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
streaming-iterator = "0.1"
sha2 = "0.10"
