[package]
name = "cortex-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["process", "time"] }
toml = "0.8"
shellexpand = "3"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "time", "macros"] }

[lints]
workspace = true
