[package]
name = "cortex-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "cortex_daemon"
path = "src/lib.rs"

[[bin]]
name = "cortex-daemon"
path = "src/main.rs"

[dependencies]
cortex-core = { path = "../cortex-core" }
cortex-context = { path = "../cortex-context" }
cortex-tools = { path = "../cortex-tools" }
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
futures.workspace = true
notify = { version = "8", features = ["macos_kqueue"] }
url = "2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
