[package]
name = "cortex-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
cortex-core = { path = "../cortex-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
